# dshow-base-classes

./: .editorconfig  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
gst-patch/: 0001-Add-meson.build-for-gst-plugins-bad-sys-dshowdecwrap.patch  0002-Add-meson.build-for-gst-plugins-bad-sys-dshowsrcwrap.patch  0003-Add-meson.build-for-gst-plugins-bad-sys-dshowvideosi.patch  0004-Activate-gst-plugins-bad-sys-dshow-plugins-build.patch  0005-Add-meson-wrap-for-strmbase.patch
src/: Microsoft-EULA.txt
